--- a/.example/app/sail/docker/mysql/Dockerfile
+++ b/.example/app/sail/docker/mysql/Dockerfile
@@ -1,4 +1,6 @@
-FROM mysql:8.0
+ARG MYSQL_VERSION=none
+
+FROM mysql:${MYSQL_VERSION}
 
 COPY custom.cnf /etc/mysql/conf.d/
 RUN chmod 664 /etc/mysql/conf.d/custom.cnf
