--- a/.example/app/sail/.example/.env.sail.default.example
+++ b/.example/app/sail/.example/.env.sail.default.example
@@ -9,11 +9,6 @@ APP_PORT={{APP_PORT}}
 
 SAIL_ASYNC={{SAIL_ASYNC}}
 
-SAIL_MYSQL={{SAIL_MYSQL}}
-MYSQL_VERSION={{MYSQL_VERSION}}
-MYSQL_ROOT_PASSWORD={{MYSQL_ROOT_PASSWORD}}
-MYSQL_FORWARD_PORT={{MYSQL_FORWARD_PORT}}
-
 SAIL_REDIS={{SAIL_REDIS}}
 SAIL_SERVICE_REDIS_SHELL=/bin/sh
 REDIS_FORWARD_PORT={{REDIS_FORWARD_PORT}}
@@ -21,3 +16,14 @@ REDIS_FORWARD_PORT={{REDIS_FORWARD_PORT}}
 SAIL_MEMCACHED={{SAIL_MEMCACHED}}
 SAIL_SERVICE_MEMCACHED_SHELL=/bin/sh
 MEMCACHED_FORWARD_PORT={{MEMCACHED_FORWARD_PORT}}
+
+SAIL_MYSQL={{SAIL_MYSQL}}
+MYSQL_VERSION={{MYSQL_VERSION}}
+MYSQL_ROOT_PASSWORD={{MYSQL_ROOT_PASSWORD}}
+MYSQL_FORWARD_PORT={{MYSQL_FORWARD_PORT}}
+
+SAIL_POSTGRES={{SAIL_POSTGRES}}
+POSTGRES_VERSION={{POSTGRES_VERSION}}
+POSTGRES_ROOT_USERNAME={{POSTGRES_ROOT_PASSWORD}}
+POSTGRES_ROOT_PASSWORD={{POSTGRES_ROOT_PASSWORD}}
+POSTGRES_FORWARD_PORT={{POSTGRES_FORWARD_PORT}}
