--- a/.example/app/sail/.example/.env.sail.default.example
+++ b/.example/app/sail/.example/.env.sail.default.example
@@ -22,8 +22,8 @@ MYSQL_VERSION={{MYSQL_VERSION}}
 MYSQL_ROOT_PASSWORD={{MYSQL_ROOT_PASSWORD}}
 MYSQL_FORWARD_PORT={{MYSQL_FORWARD_PORT}}
 
-SAIL_POSTGRES={{SAIL_POSTGRES}}
-POSTGRES_VERSION={{POSTGRES_VERSION}}
-POSTGRES_ROOT_USERNAME={{POSTGRES_ROOT_PASSWORD}}
-POSTGRES_ROOT_PASSWORD={{POSTGRES_ROOT_PASSWORD}}
-POSTGRES_FORWARD_PORT={{POSTGRES_FORWARD_PORT}}
+SAIL_PGSQL={{SAIL_PGSQL}}
+PGSQL_VERSION={{PGSQL_VERSION}}
+PGSQL_ROOT_USERNAME={{PGSQL_ROOT_PASSWORD}}
+PGSQL_ROOT_PASSWORD={{PGSQL_ROOT_PASSWORD}}
+PGSQL_FORWARD_PORT={{PGSQL_FORWARD_PORT}}
