--- a/.example/support/post-clone/setup.local.sh.example
+++ b/.example/support/post-clone/setup.local.sh.example
@@ -211,7 +211,7 @@ function doCopySailExample() {
 
 echo ""
 echo ": .bootstrap.sh"
-wsCopyFileIfNotExists "${BASE_DIR}/base/.example/support/.bootstrap.sh" "${BASE_DIR}/../" "644"
+wsCopyFileIfNotExists "${BASE_DIR}/base/.example/support/.bootstrap.sh.example" "${BASE_DIR}/.bootstrap.sh" "644"
 
 echo ""
 echo "---[ env files ]---"
