Include sail/mailpit option

--- a/.example/app/sail/.example/.env.sail.default.example
+++ b/.example/app/sail/.example/.env.sail.default.example
@@ -27,3 +27,7 @@ PGSQL_VERSION={{PGSQL_VERSION}}
 PGSQL_ROOT_USERNAME={{PGSQL_ROOT_PASSWORD}}
 PGSQL_ROOT_PASSWORD={{PGSQL_ROOT_PASSWORD}}
 PGSQL_FORWARD_PORT={{PGSQL_FORWARD_PORT}}
+
+SAIL_MAILPIT={{SAIL_MAILPIT}}
+SAIL_SERVICE_MAILPIT_SHELL=/bin/sh
+MAILPIT_FORWARD_PORT={{MAILPIT_FORWARD_PORT}}
