--- a/.example/app/post-clone/setup.local.sh.example
+++ b/.example/app/post-clone/setup.local.sh.example
@@ -65,6 +65,10 @@ then
   [ -n "${pPgsqlForwardPort}" ] || envVarRead "Postgres forward port" "pPgsqlForwardPort" "default:${defPgsqlForwardPort}|required"
 fi
 
+defMailpitForwardPort=$(wsCoalesce "${default_pMailpitForwardPort}" "7051")
+[ -n "${pEnableMailpit}" ] || envVarRead "Enable Mailpit" "pEnableMailpit" "default:$(wsCoalesce "${default_pEnableMailpit}" "yes")|required|lower-case|hide-values" "y|yes|n|no"
+[ "${pEnableMailpit:0:1}" == "n" ] || [ -n "${pMailpitForwardPort}" ] || envVarRead "REDIS forward port" "pMailpitForwardPort" "default:${defMailpitForwardPort}|required"
+
 echo ""
 echo "---[ parameters ]---"
 echo ""
@@ -102,6 +106,11 @@ then
   echo "pPgsqlRootPassword   : ${pPgsqlRootPassword}"
   echo "pPgsqlForwardPort    : ${pPgsqlForwardPort}"
 fi
+echo "pEnableMailpit         : ${pEnableMailpit}"
+if [ "${pEnableMailpit:0:1}" == "y" ]
+then
+  echo "pMailpitForwardPort    : ${pMailpitForwardPort}"
+fi
 echo ""
 
 [ -n "${pConfirm}" ] || envVarRead "Confirm parameters?" "pConfirm" "default:yes|lower-case|hide-values" "y|yes|n|no"
@@ -113,7 +122,7 @@ then
   envVarRead "Save post-clone params?" "pSavePostcloneParams" "default:yes|lower-case|hide-values" "y|yes|n|no"
   if [ "${pConfirm:0:1}" == "y" ]
   then
-    echo "\
+    echo -n "\
 #!/bin/bash
 pSailProject=\"${pSailProject}\"
 pSailSubproject=\"${pSailSubproject}\"
@@ -135,6 +144,8 @@ pPgsqlVersion=\"${pPgsqlVersion}\"
 pPgsqlRootUsername=\"${pPgsqlRootUsername}\"
 pPgsqlRootPassword=\"${pPgsqlRootPassword}\"
 pPgsqlForwardPort=\"${pPgsqlForwardPort}\"
+pEnableMailpit=\"${pEnableMailpit}\"
+pMailpitForwardPort=\"${pMailpitForwardPort}\"
 " > "${SCRIPT_DIR}/setup.local.env"
   fi
 fi
@@ -144,6 +155,7 @@ fi
 [ "${pEnableMemcached:0:1}" == "y" ] && pEnableMemcached="true" || pEnableMemcached="false"
 [ "${pEnableMysql:0:1}" == "y" ] && pEnableMysql="true" || pEnableMysql="false"
 [ "${pEnablePgsql:0:1}" == "y" ] && pEnablePgsql="true" || pEnablePgsql="false"
+[ "${pEnableMailpit:0:1}" == "y" ] && pEnableMailpit="true" || pEnableMailpit="false"
 
 WS_TEMPLATE_FILE_VARS="\
 SAIL_PROJECT=${pSailProject}
@@ -166,6 +178,8 @@ PGSQL_VERSION=${pPgsqlVersion:-$defPgsqlVersion}
 PGSQL_ROOT_USERNAME=${pPgsqlRootUsername:-$defPgsqlRootUsername}
 PGSQL_ROOT_PASSWORD=${pPgsqlRootPassword:-$defPgsqlRootPassword}
 PGSQL_FORWARD_PORT=${pPgsqlForwardPort:-$defPgsqlForwardPort}
+SAIL_MAILPIT=${pEnableMailpit}
+MAILPIT_FORWARD_PORT=${pMailpitForwardPort:-$defMailpitForwardPort}
 "
 
 #-- sail
