--- a/.example/app/post-clone/setup.local.sh.example
+++ b/.example/app/post-clone/setup.local.sh.example
@@ -24,7 +24,12 @@ pclLoadDefaultAndSavedParams
 echo ""
 
 [ -n "${pSailProject}" ] || envVarRead "Sail project" "pSailProject" "default:${default_pSailProject}|required|lower-case" ""
-[ -n "${pSailSubproject}" ] || envVarRead "Sail subproject" "pSailSubproject" "default:$(wsCoalesce "${default_pSailSubproject}" "$(basename "$(realpath "${BASE_DIR}")")")|required|lower-case" ""
+if [ -z "${pSailSubproject}" ]
+then
+  defSailSubproject="$(basename "$(realpath "${BASE_DIR}")")"
+  [ "${defSailSubproject}" != "${pSailProject}" ] || defSailSubproject="full"
+  envVarRead "Sail subproject" "pSailSubproject" "default:$(wsCoalesce "${default_pSailSubproject}" "${defSailSubproject}")|required|lower-case" ""
+fi
 
 [ -n "${pUbuntuCodname}" ] || envVarRead "Ubuntu codename" "pUbuntuCodname" "default:$(wsCoalesce "${default_pUbuntuCodname}" "jammy")|required|lower-case" ""
 [ -n "${pPhpVersion}" ] || envVarRead "PHP version" "pPhpVersion" "default:$(wsCoalesce "${default_pPhpVersion}" "8.2")|required" ""
@@ -33,17 +38,17 @@ echo ""
 [ -n "${pAppPort}" ] || envVarRead "APP port" "pAppPort" "default:$(wsCoalesce "${default_pAppPort}" "7001")|required" ""
 [ -n "${pEnableAsync}" ] || envVarRead "Enable async jobs app" "pEnableAsync" "default:$(wsCoalesce "${default_pEnableAsync}" "yes")|required|lower-case|hide-values" "y|yes|n|no"
 
-defRedisForwardPort=$(wsCoalesce "${default_pRedisForwardPort}" "7002")
+defRedisForwardPort=$(wsCoalesce "${default_pRedisForwardPort}" "$((pAppPort + 2))")
 [ -n "${pEnableRedis}" ] || envVarRead "Enable REDIS" "pEnableRedis" "default:$(wsCoalesce "${default_pEnableRedis}" "yes")|required|lower-case|hide-values" "y|yes|n|no"
 [ "${pEnableRedis:0:1}" == "n" ] || [ -n "${pRedisForwardPort}" ] || envVarRead "REDIS forward port" "pRedisForwardPort" "default:${defRedisForwardPort}|required"
 
-defMemcachedForwardPort=$(wsCoalesce "${default_pMemcacedForwardPort}" "7003")
+defMemcachedForwardPort=$(wsCoalesce "${default_pMemcacedForwardPort}" "$((pAppPort + 3))")
 [ -n "${pEnableMemcached}" ] || envVarRead "Enable Memcached" "pEnableMemcached" "default:$(wsCoalesce "${default_pEnableMemcached}" "yes")|required|lower-case|hide-values" "y|yes|n|no"
 [ "${pEnableMemcached:0:1}" == "n" ] || [ -n "${pMemcacedForwardPort}" ] || envVarRead "Memcached forward port" "pMemcacedForwardPort" "default:${defMemcachedForwardPort}|required"
 
 defMysqlVersion=$(wsCoalesce "${default_pMysqlVersion}" "8.0")
 defMysqlRootPassword=$(wsCoalesce "${default_pMysqlRootPassword}" "secret")
-defMysqlForwardPort=$(wsCoalesce "${default_pMysqlForwardPort}" "7004")
+defMysqlForwardPort=$(wsCoalesce "${default_pMysqlForwardPort}" "$((pAppPort + 4))")
 [ -n "${pEnableMysql}" ] || envVarRead "Enable MySQL" "pEnableMysql" "default:$(wsCoalesce "${default_pEnableMysql}" "yes")|required|lower-case|hide-values" "y|yes|n|no"
 if [ "${pEnableMysql:0:1}" == "y" ]
 then
@@ -55,8 +60,8 @@ fi
 defPgsqlVersion=$(wsCoalesce "${default_pPgsqlVersion}" "16")
 defPgsqlRootUsername=$(wsCoalesce "${default_pPgsqlRootUsername}" "postgres")
 defPgsqlRootPassword=$(wsCoalesce "${default_pPgsqlRootPassword}" "secret")
-defPgsqlForwardPort=$(wsCoalesce "${default_pPgsqlForwardPort}" "7005")
-[ -n "${pEnablePgsql}" ] || envVarRead "Enable Postgres" "pEnablePgsql" "default:$(wsCoalesce "${default_pEnablePgsql}" "yes")|required|lower-case|hide-values" "y|yes|n|no"
+defPgsqlForwardPort=$(wsCoalesce "${default_pPgsqlForwardPort}" "$((pAppPort + 5))")
+[ -n "${pEnablePgsql}" ] || envVarRead "Enable Postgres" "pEnablePgsql" "default:$(wsCoalesce "${default_pEnablePgsql}" "no")|required|lower-case|hide-values" "y|yes|n|no"
 if [ "${pEnablePgsql:0:1}" == "y" ]
 then
   [ -n "${pPgsqlVersion}" ] || envVarRead "Postgres version" "pPgsqlVersion" "default:${defPgsqlVersion}|required"
@@ -65,7 +70,7 @@ then
   [ -n "${pPgsqlForwardPort}" ] || envVarRead "Postgres forward port" "pPgsqlForwardPort" "default:${defPgsqlForwardPort}|required"
 fi
 
-defMailpitForwardPort=$(wsCoalesce "${default_pMailpitForwardPort}" "7051")
+defMailpitForwardPort=$(wsCoalesce "${default_pMailpitForwardPort}" "$((pAppPort + 51))")
 [ -n "${pEnableMailpit}" ] || envVarRead "Enable Mailpit" "pEnableMailpit" "default:$(wsCoalesce "${default_pEnableMailpit}" "yes")|required|lower-case|hide-values" "y|yes|n|no"
 [ "${pEnableMailpit:0:1}" == "n" ] || [ -n "${pMailpitForwardPort}" ] || envVarRead "Mailpit forward port" "pMailpitForwardPort" "default:${defMailpitForwardPort}|required"
 
