--- a/.example/app/sail/docker/docker-compose-async.yml
+++ b/.example/app/sail/docker/docker-compose-async.yml
@@ -11,8 +11,9 @@ services:
             SERVER_ENVIRONMENT: ${SERVER_ENVIRONMENT}
             SERVER_MODE: async
             SERVER_LABEL: ${SAIL_PROJECT}-${SAIL_SUBPROJECT}/async
-            WWWUSER: ${WWWUSER}
-            WWWGROUP: ${WWWGROUP}
+            SAIL_GROUPID: ${SAIL_GROUPID}
+            SAIL_USERID: ${SAIL_USERID}
+            SAIL_USERNAME: ${SAIL_USERNAME}
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
