--- a/.example/app/sail/.example/.env.sail.default.example
+++ b/.example/app/sail/.example/.env.sail.default.example
@@ -1,6 +1,8 @@
 SAIL_PROJECT={{SAIL_PROJECT}}
 SAIL_SUBPROJECT={{SAIL_SUBPROJECT}}
 
+SAIL_USERNAME={{SAIL_USERNAME}}
+
 UBUNTU_CODENAME={{UBUNTU_CODENAME}}
 PHP_VERSION={{PHP_VERSION}}
 NODE_VERSION={{NODE_VERSION}}
